crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `}`
  ╭▸ test:2:8
  │
2 │ when { if };
  ╰╴       ━━ expected `}`
