crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_1_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ ident3_1:2:11
  │
2 │ when { if };
  ╰╴          ━ unexpected token
error: expected `}`
  ╭▸ ident3_1:2:12
  │
2 │ when { if };
  ╰╴           ━ expected `}`
