crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_1_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 50)
└─Policy [0, 50)
  ├─PermitKeyword "permit" [0, 6)
  ├─Whitespace " " [6, 7)
  ├─OpenParenthesis "(" [7, 8)
  ├─VariableDefinition [8, 17)
  │ └─PrincipalKeyword "principal" [8, 17)
  ├─Comma "," [17, 18)
  ├─Whitespace " " [18, 19)
  ├─VariableDefinition [19, 25)
  │ └─ActionKeyword "action" [19, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 35)
  │ └─ResourceKeyword "resource" [27, 35)
  ├─CloseParenthesis ")" [35, 36)
  ├─Whitespace "\n" [36, 37)
  ├─Condition [37, 48)
  │ ├─WhenKeyword "when" [37, 41)
  │ ├─Whitespace " " [41, 42)
  │ ├─OpenBrace "{" [42, 43)
  │ ├─Whitespace " " [43, 44)
  │ └─IfExpression [44, 48)
  │   ├─IfKeyword "if" [44, 46)
  │   ├─Whitespace " " [46, 47)
  │   └─Error [47, 48)
  │     └─CloseBrace "}" [47, 48)
  ├─Semicolon ";" [48, 49)
  └─Whitespace "\n" [49, 50)
