crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_4_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..62
└─Policy 0..62
  ├─PermitKeyword "permit" 0..6
  ├─Whitespace " " 6..7
  ├─OpenParenthesis "(" 7..8
  ├─VariableDefinition 8..17
  │ └─PrincipalKeyword "principal" 8..17
  ├─Comma "," 17..18
  ├─Whitespace " " 18..19
  ├─VariableDefinition 19..25
  │ └─ActionKeyword "action" 19..25
  ├─Comma "," 25..26
  ├─Whitespace " " 26..27
  ├─VariableDefinition 27..35
  │ └─ResourceKeyword "resource" 27..35
  ├─CloseParenthesis ")" 35..36
  ├─Whitespace "\n" 36..37
  ├─Condition 37..60
  │ ├─WhenKeyword "when" 37..41
  │ ├─Whitespace " " 41..42
  │ ├─OpenBrace "{" 42..43
  │ ├─Whitespace " " 43..44
  │ ├─IfExpression 44..60
  │ │ ├─IfKeyword "if" 44..46
  │ │ ├─Error 46..48
  │ │ │ └─PathSeparator "::" 46..48
  │ │ ├─ThenKeyword "then" 48..52
  │ │ ├─Error 52..54
  │ │ │ └─PathSeparator "::" 52..54
  │ │ ├─ElseKeyword "else" 54..58
  │ │ ├─Whitespace " " 58..59
  │ │ └─Error 59..60
  │ │   └─CloseBrace "}" 59..60
  │ └─CloseBrace "" 60..60
  ├─Semicolon ";" 60..61
  └─Whitespace "\n" 61..62
