crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_5-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: invalid `if` expression
  ╭▸ test:2:8
  │
2 │ when { if::true::then::false::else::true };
  ╰╴       ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ expected `if <expr> then <expr> else <expr>`
