crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_5_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ ident3_5:2:10
  │
2 │ when { if::true::then::false::else::true };
  ╰╴         ━━ unexpected token
error: expected `then`
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━ expected `then`
error: expected `else`
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━ expected `else`
error: expected `}`
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━ expected `}`
error: expected `;`
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━ expected `;`
error: unexpected token
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ unexpected token
error: expected `;`
  ╭▸ ident3_5:2:45
  │
2 │ when { if::true::then::false::else::true };
  ╰╴                                           ━ expected `;`
error: missing policy effect
  ╭▸ ident3_5:2:12
  │
2 │ when { if::true::then::false::else::true };
  ╰╴           ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ expected `permit` or `forbid`
