crates/lowerer/tests/snapshots/upstream_parser_policy__ident3_5_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..81
├─Policy 0..48
│ ├─PermitKeyword "permit" 0..6
│ ├─Whitespace " " 6..7
│ ├─OpenParenthesis "(" 7..8
│ ├─VariableDefinition 8..17
│ │ └─PrincipalKeyword "principal" 8..17
│ ├─Comma "," 17..18
│ ├─Whitespace " " 18..19
│ ├─VariableDefinition 19..25
│ │ └─ActionKeyword "action" 19..25
│ ├─Comma "," 25..26
│ ├─Whitespace " " 26..27
│ ├─VariableDefinition 27..35
│ │ └─ResourceKeyword "resource" 27..35
│ ├─CloseParenthesis ")" 35..36
│ ├─Whitespace "\n" 36..37
│ └─Condition 37..48
│   ├─WhenKeyword "when" 37..41
│   ├─Whitespace " " 41..42
│   ├─OpenBrace "{" 42..43
│   ├─Whitespace " " 43..44
│   └─IfExpression 44..48
│     ├─IfKeyword "if" 44..46
│     └─Error 46..48
│       └─PathSeparator "::" 46..48
└─Policy 48..81
  └─Error 48..81
    ├─TrueKeyword "true" 48..52
    ├─PathSeparator "::" 52..54
    ├─ThenKeyword "then" 54..58
    ├─PathSeparator "::" 58..60
    ├─FalseKeyword "false" 60..65
    ├─PathSeparator "::" 65..67
    ├─ElseKeyword "else" 67..71
    ├─PathSeparator "::" 71..73
    ├─TrueKeyword "true" 73..77
    ├─Whitespace " " 77..78
    ├─CloseBrace "}" 78..79
    ├─Semicolon ";" 79..80
    └─Whitespace "\n" 80..81
