crates/lowerer/tests/snapshots/upstream_parser_policy__ident4_2-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: incomplete `if` expression
  ╭▸ test:2:8
  │
2 │ when { if(true) };
  ╰╴       ━━━━━━━━ expected `then`
